--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sunny-yorita/yorita-sort#readme",
   "dependencies": {
+    "axios": "0.18.0",
     "express": "4.16.4",
     "pg": "7.5.0"
   }
