--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "axios": "0.18.0",
     "express": "4.16.4",
+    "passport": "0.4.0",
+    "passport-google-oauth20": "1.0.0",
     "pg": "7.5.0"
   }
 }
