--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for sorting application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/sunny-yorita/yorita-sort#readme",
   "dependencies": {
     "axios": "0.18.0",
+    "babel-cli": "6.26.0",
     "express": "4.16.4",
     "passport": "0.4.0",
     "passport-google-oauth20": "1.0.0",
