--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "backend for sorting application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +19,17 @@
   "dependencies": {
     "axios": "0.18.0",
     "babel-cli": "6.26.0",
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.18.3",
     "express": "4.16.4",
+    "jsonwebtoken": "8.3.0",
     "passport": "0.4.0",
     "passport-google-oauth20": "1.0.0",
-    "pg": "7.5.0"
+    "passport-jwt": "4.0.0",
+    "pg": "7.5.0",
+    "validator": "10.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "1.18.6"
   }
 }
