making a connection to postgres database server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend for sorting application",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
